--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
 
     <!-- HOME START -->
     <div class="home">
-      <div class="position-relative overflow-hidden p-3 p-lg-5 text-center text-light">
+      <div class="position-relative overflow-hidden p-3 p-lg-5 text-center">
         <div class="text col-md-6 p-lg-5 mx-auto my-5">
-          <h1 class="display-3 fw-bold mt-5">Felda Fauzan Alfajr</h1>
-          <h3 class="fw-normal text-light mb-3">Musician | Front End Developer</h3>
+          <h1 class="display-3 fw-bold mt-5" style="color: rgb(92, 157, 157);">Felda Fauzan Alfajr</h1>
+          <h3 class="fw-normal mb-3" style="color: rgb(0, 0, 0);">Musician | Front End Developer</h3>
         </div>
         <div class="product-device shadow-sm d-none d-md-block"></div>
         <div class="product-device product-device-2 shadow-sm d-none d-md-block"></div>
